# ActividadIntegradora2

./: .gitignore  CMakeLists.txt  README.md  codecov.yml  main.cpp  sonar-project.properties
.github/workflows/: build.yml
ActividadIntegradora1/: main  main.cpp
app/: CMakeLists.txt  main.cpp
src/func/: CMakeLists.txt  func.cpp  func.h
tests/: CMakeLists.txt  test_func.cpp
